# net2vec

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/extensions/git/scripts/powershell/: initialize-repo.ps1
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: agent-file-template.md  checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
specs/001-docs-vector-ingestion/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-docs-vector-ingestion/checklists/: requirements.md
specs/001-docs-vector-ingestion/contracts/: mcp-search-docs.json  openapi.yaml
src/net2vec/: __init__.py
src/net2vec/api/: app.py  routes.py
src/net2vec/cli/: __init__.py  ingest.py
src/net2vec/config/: codex.py  settings.py
src/net2vec/domain/: chunks.py  documents.py  search.py
src/net2vec/embeddings/: client.py  service.py
src/net2vec/ingestion/: chunker.py  extractor.py  fetcher.py  pipeline.py
src/net2vec/mcp/: server.py
src/net2vec/persistence/: database.py  models.py  repositories.py
src/net2vec/persistence/migrations/: env.py
src/net2vec/persistence/migrations/versions/: 0001_enable_pgvector.py
src/net2vec/search/: ranking.py  service.py
tests/integration/: test_ingest_refresh_flow.py
tests/unit/: test_chunker.py  test_embedding_service.py  test_extractor.py  test_ingest_url_policy.py  test_repositories.py
