[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "net2vec"
version = "0.1.0"
description = "Ingest documentation webpages, chunk them by headings, embed them, and expose them to agents."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "typer>=0.12",
  "pydantic>=2.6",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "pgvector>=0.2",
  "openai>=1.40",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "httpx>=0.27",
  "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "lizard>=1.17",
]

[project.scripts]
net2vec-ingest = "net2vec.cli.ingest:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
norecursedirs = ["pytest-cache-files-*", ".pytest_cache", "__pycache__"]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["pytest-cache-files-*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.net2vec.quality]
complexity_command = "lizard -C 3 src tests"
